added a new model page for practice

--- a/RugbyManagementGameV1/RugbyAPI/Views/Home/Index.cshtml
+++ b/RugbyManagementGameV1/RugbyAPI/Views/Home/Index.cshtml
@@ -1,3 +1,7 @@
-﻿<h1>Welcome to RUGBY MANAGER 2017</h1>
+﻿@{
+    ViewData["Title"] = "RUGBY MANAGER 2017";
+}
+
+<h1>Welcome to RUGBY MANAGER 2017</h1>
 
 <h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
