--- a/RugbyManagementGameV1/RugbyAPI/Views/Shared/_Layout.cshtml
+++ b/RugbyManagementGameV1/RugbyAPI/Views/Shared/_Layout.cshtml
@@ -5,5 +5,9 @@
 </head>
 <body>
 	@RenderBody()
+	<hr />
+    <footer>
+        <p>&copy; 2017 - Rugby Manager 2017</p>
+    </footer>
 </body>
 </html>
